--- a/views/login.html
+++ b/views/login.html
@@ -1,18 +1,47 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+	<meta charset="UTF-8">
+	<meta name="viewport"
+		  content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>Document</title>
 </head>
 <body>
 <form action="/login?username=213" method="post">
-    用户名：<input type="text" name="username">
-    age：<input type="text" name="age">
-    密  码：<input type="password" name="password">
-    <input type="submit"  value="登录">
+	<label>用户名：
+		<input type="text" name="username">
+	</label>
+	<label>age：
+		<input type="text" name="age">
+	</label>
+	<label>密 码：
+		<input type="password" name="password">
+	</label>
+	<label>
+		<select name="fruit">
+			<option value="apple">apple</option>
+			<option value="pear">pear</option>
+			<option value="banana">banana</option>
+		</select>
+	</label>
+	<label>
+		<input type="radio" name="gender" checked value="1">男
+	</label>
+	<label>
+		<input type="radio" name="gender" value="2">女
+	</label>
+	<label>
+		<input type="checkbox" name="interest" value="football">足球
+	</label>
+	<label>
+		<input type="checkbox" name="interest" value="basketball">篮球
+	</label>
+	<label>
+		<input type="checkbox" name="interest" value="tennis">网球
+	</label>
+	<input type="hidden" name="token" value="{{.}}">
+	<input type="submit" value="登录">
 </form>
 </body>
 </html>
