--- a/views/upload.html
+++ b/views/upload.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <form action="/upload" enctype="multipart/form-data" method="post">
-	<input type="file" name="uploadfile" />
+	<input type="file" name="file" />
 	<input type="hidden" name="token" value="{{ . }}"/>
 	<input type="submit" value="提交" />
 </form>
