--- a/views/login.html
+++ b/views/login.html
@@ -1,47 +1,37 @@
 <!doctype html>
-<html lang="en">
+<html lang="zh-Hans">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport"
-		  content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Document</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://cdn.staticfile.org/amazeui/2.7.2/css/amazeui.min.css">
+    <link rel="stylesheet" href="/css/login.css?v=190527">
+    <script src="https://cdn.staticfile.org/jquery/3.4.1/jquery.min.js"></script>
+    <title>登录微聊 - EASYSWOOLE CHAT DEMO</title>
 </head>
 <body>
-<form action="/login?username=213" method="post">
-	<label>用户名：
-		<input type="text" name="username">
-	</label>
-	<label>age：
-		<input type="text" name="age">
-	</label>
-	<label>密 码：
-		<input type="password" name="password">
-	</label>
-	<label>
-		<select name="fruit">
-			<option value="apple">apple</option>
-			<option value="pear">pear</option>
-			<option value="banana">banana</option>
-		</select>
-	</label>
-	<label>
-		<input type="radio" name="gender" checked value="1">男
-	</label>
-	<label>
-		<input type="radio" name="gender" value="2">女
-	</label>
-	<label>
-		<input type="checkbox" name="interest" value="football">足球
-	</label>
-	<label>
-		<input type="checkbox" name="interest" value="basketball">篮球
-	</label>
-	<label>
-		<input type="checkbox" name="interest" value="tennis">网球
-	</label>
-	<input type="hidden" name="token" value="{{.}}">
-	<input type="submit" value="登录">
-</form>
+
+<!-- 登录框体 -->
+<div class="block-box">
+    <div class="main-title">微聊</div>
+    <div class="sub-title">EASYSWOOLE CHAT DEMO</div>
+    <form class="am-form" style="margin-top: 80px;">
+        <div class="am-form-group am-input-group">
+            <span class="am-input-group-label"><i class="am-icon-at am-icon-fw"></i></span>
+            <input type="email" class="am-form-field" placeholder="输入电子邮件">
+        </div>
+        <div class="am-form-group am-input-group">
+            <span class="am-input-group-label"><i class="am-icon-lock am-icon-fw"></i></span>
+            <input type="password" class="am-form-field" placeholder="输入登录密码">
+        </div>
+        <div class="am-form-group">
+            <button type="button" class="am-btn am-btn-primary am-btn-block" style="margin-top: 0px;">开始畅聊</button>
+        </div>
+        <div class="am-form-group" style="text-align: center;margin-top: 130px;">
+            <a href="/register">没有微聊账号 马上注册一个</a>
+        </div>
+    </form>
+</div>
+
 </body>
 </html>
